src/app/components/team-about/team-about.component.scss
$black: #000000;
$dark-grey: #707070;
$medium-grey: #7D828F;
$light-grey: #C8CCD8;
$very-light-grey: #EEEFF4;
$red: #DF5656;
$font: 'Spartan',
sans-serif;



//-----------------Team About section ------------------
.team-cont {
    padding: 5% 7% 5% 10%;
    .title-col {
        @media screen and (min-width:800px){
            width: 50%;
        }
        width: 100%;
        h3 {
            font-size: 56px;
            font-weight: 300;
            letter-spacing: -0.2rem;
            padding-bottom: 10px;
            padding-right: 50%;
        }
    }
    .members-col {
        @media screen and (min-width: 757px) {
            justify-content: space-evenly !important;
        }
        @media screen and (min-width:800px){
            width: 50%;
        }
        width: 100%;
        .member-card {
            @media screen and (min-width:800px){
                width: 50%;
            }
            width: 100%;
            .card-col {
                margin-bottom: 50px !important;
                img {
                    width: 350px;
                }
                h3 {
                    width: 250px;
                    padding-top: 15px;
                    font-size: 18px;
                    font-weight: 500;
                    padding-bottom: 5px;
                }
                p {
                    font-size: 16px;
                    width: 250px;
                }
                i {
                    margin: 2% 4% 2% 1%;
                    cursor: pointer;
                }
            }
        }
    }
}

